bootstrap version 3.1.0, fixed issue on 'read more' buttons on small screens

--- a/style.css
+++ b/style.css
@@ -169,3 +169,9 @@ img.alignnone {
 	margin: 80px 0;
 	border-color: #ccc;
 }
+
+a.btn{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 100%;
+}
